--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -16,7 +16,7 @@ jobs:
               uses: actions/checkout@v3
             
             - name: Setup GCP Service Account
-              uses: google-github-actions/setup-gcloud@v1
+              uses: google-github-actions/setup-gcloud@master
               with:
                 version: latest
                 service_account_email: ${{ secrets.GCP_SA_EMAIL }}
