--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -7,35 +7,53 @@ concurrency:
 
 
 jobs:
-    terraform_plan:
-        name: 'Terraform Plan'
+    terraform:
+        name: 'Terraform'
         runs-on: ubuntu-latest
+
+        permissions:
+            contents: 'read'
+            id-token: 'write'
 
         steps:
             - name: Checkout
               uses: actions/checkout@v3
             
-            - name: Setup GCP Service Account
-              uses: google-github-actions/setup-gcloud@master
+            - id: 'auth'
+              name: 'Authenticate to Google Cloud'
+              uses: 'google-github-actions/auth@v1'
               with:
-                version: latest
-                service_account_email: ${{ secrets.GCP_SA_EMAIL }}
-                service_account_key: ${{ secrets.GCP_SA_KEY }}
-                export_default_credentials: true
-
-            # Generates an execution plan for terraform
-            - name: Terraform Plan
-              working-directory: ./terraform
-              continue-on-error: true
-              run: |
-                terraform init
-                terraform plan -out "tf_plan" -input=false
+                workload_identity_provider: 'projects/889393711958/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
+                service_account: 'terraform-github@tfe-gcp-automation.iam.gserviceaccount.com'
             
-            - name: Upload TF Plan
-              uses: actions/upload-artifact@v3
+            - uses: hashicorp/setup-terraform@v2
               with: 
-                name: tf_plan
-                path: ./terraform/tf_plan
-                if-no-files-found: error
-                retention-days: 1
+                terraform_version: 1.4.0
+            
+            - id: fmt
+              name: Terraform fmt
+              working-directory: ./terraform
+              run: terraform fmt -check
 
+            - id: init
+              name: Terraform init
+              working-directory: ./terraform
+              run: terraform init -input=false
+
+            - id: validate
+              name: Terraform validate
+              run: terraform validate -no-color
+
+            - id: plan
+              name: Terraform Plan
+              working-directory: ./terraform
+              run: terraform plan -no-color
+              continue-on-error: true
+            
+            - name: Terraform Plan Status
+              if: steps.plan.outcome == 'failure'
+              run: exit 1
+
+            - name: Terraform Apply
+              working-directory: ./terraform
+              run: terraform apply -auto-approve -input=false
